	* Added "floating window" support by using rootless nxagent as
	  it will be standard in NX 1.5.0.
	* Added "floating window" support by just nxproxy/nxproxy connection
	  and added configuration directive to enable rootless mode.
	* Added nxsetup --uninstall and added more feature to nxsetup.
	  Note: You need to use nxsetup --install for installation now.

20.11.2004 FreeNX 0.2.7 "Skolelinux Edition"
	* Fix nxserver to work again with KNX-Client. ('\r' is evil)
	* Fix timeout in nxnode-login to allow proper session management
	  again.
	* Fixed possible race condition for the wait-file.

11.11.2004 FreeNX 0.2.6
	
	* Security: Fixed a possible exploit in ssh-usage
	    (thanx to Sebastian Krahmer from the SuSE security team)
	* Important: Public/Private key is no longer used for PAM auth mode.
	
14.10.2004 FreeNX 0.2.5
	* Added Xdialog interface for nxclient and automatic usage
	  of commercial nxclient when available. (Thx go to Rick Stout 
	  <zipsonic@gmail.com>)
	* Added bugfix from the 0.3.0 branch for more flexible nxdesktop in
	  nxnode.
	* Added patch by Rick Stout for permission problems in nxnode.
	* Added patch by Rick Stout for a typo in nxkeygen.
	* Updated gentoo-nomachine.diff.
	* Updated CONTRIB to include a description of lazy-image encoding.

11.09.2004 FreeNX 0.2.4
	* Added timeout to avoid having hanging tail processes.
	* Added "locking" of the display-offset if nxagent failed to start.
	* Fixed ssh encryption for resume on client 1.4.0-snapshot 5.
	* Fixed mktemp, which was non-portable to FreeBSD and Red Hat 9.

10.09.2004 FreeNX 0.2-3
	* Added support for autoreconnection or autoreconnection just 
	  for the case when an older client version is used.
	  	* This makes it possible to use Reconnection with the 
	  	  stable version 1.3.2-7 (enabled by default)
	* Added instructions how to install the NoMachine sources to INSTALL
	* Changed $NX_DIR/bin/ssh to ssh to fix gentoo-nomachine.diff